--- a/package.json
+++ b/package.json
@@ -1,35 +1,26 @@
 {
-  "name": "bytetech",
-  "version": "2.1.0",
-  "description": "-- AWESOMENESS --",
+  "name": "loa",
+  "version": "0.0.1",
+  "description": "",
   "main": "bot.js",
-  "scripts": {
-    "start": "node bot.js"
-  },
   "dependencies": {
-    "ascii-data-table": "^2.1.1",
-    "canvas": "^1.6.10",
-    "dateformat": "^3.0.3",
+    "discord.io": "^2.5.3",
     "discord.js": "^11.3.2",
-    "express": "^4.16.3",
-    "ffmpeg": "0.0.4",
+    "eris": "^0.8.3",
     "ffmpeg-binaries": "^3.2.2-3",
-    "fs": "0.0.2",
+    "fs": "0.0.1-security",
     "get-youtube-id": "^1.0.0",
-    "jimp": "^0.2.28",
-    "moment": "^2.22.1",
-    "ms": "^2.1.1",
-    "opusscript": "0.0.6",
-    "quick.db": "^6.2.0",
+    "pacote": "^7.2.0",
     "request": "^2.85.0",
-    "simple-youtube-api": "^5.0.2",
-    "snekfetch": "^3.6.4",
-    "sqlite": "^2.9.1",
-    "sqlite3": "^4.0.0",
+    "simple-youtube-api": "^5.0.1",
     "youtube-info": "^1.2.0",
-    "ytdl-core": "^0.20.3"
+    "youtube-node": "^1.3.2",
+    "ytdl-core": "^0.20.2"
   },
-  "engines": {
-    "node": "8.4.0"
-  }
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "throw",
+  "license": "ISC"
 }
